# evergarden

./: .env.sample  .gitignore  .pre-commit-config.yaml  LICENSE.md  Makefile  README.md  package-lock.json  package.json  pyproject.toml  serverless.yml
evergarden/: main.py
evergarden/api/: api.py
evergarden/api/endpoints/: markdown.py
evergarden/core/: config.py
evergarden/services/: markdown.py
evergarden/utils/aws/: consts.py  s3.py
